<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWarm"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:text="@string/a3b1_header"/>

            <TextView
                android:id="@+id/a3b1_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:text="@string/a3b1_output"/>

            <TextView
                android:id="@+id/a3b1_answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:typeface="monospace"
                android:textSize="11sp"
                android:text="@string/a3b1_answer"/>

            <LinearLayout
                android:id="@+id/a3b1_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginBottom="20sp"
                android:visibility="gone"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/a3b1_edit_text"
                    android:hint="@string/a3b1_q2_hint"
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/a3b1_send_btn"
                    android:hint="@string/a3b_send_btn"
                    android:onClick="onQ1Send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q1"
                android:text="@string/a3b1_q1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q2"
                android:text="@string/a3b1_q2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q3"
                android:text="@string/a3b1_q3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q4"
                android:text="@string/a3b1_q4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q5"
                android:text="@string/a3b1_q5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q6"
                android:text="@string/a3b1_q6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q7"
                android:text="@string/a3b1_q7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q8"
                android:text="@string/a3b1_q8"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q9"
                android:text="@string/a3b1_q9"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q10"
                android:text="@string/a3b1_q10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:onClick="onQ1Click"
                android:id="@+id/a3b1_q11"
                android:text="@string/a3b1_q11"/>

        </LinearLayout>


        <Button
            android:id="@+id/a3b1_back_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/questions"
            android:onClick="ChooseQ"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLavender"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3b1_back_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tests"
            android:onClick="Choose3"
            android:textColor="@color/colorLimeGreen"
            android:background="@color/colorPrimary"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3b1_back_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:onClick="Back"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLimeGreen"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

</ScrollView>