<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20pt"
            android:text="@string/a3_header"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/a3_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test_name1"
            android:onClick="Choose3"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLavender"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test_name2"
            android:onClick="Choose3"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLavender"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test_name3"
            android:onClick="Choose3"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLavender"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/test_name4"
            android:onClick="Choose3"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLavender"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/a3_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:onClick="Back"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorLimeGreen"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

</ScrollView>